2006-02-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/edit.py:
	* lib/gaupol/gtk/delegates/timing.py:
	* lib/gaupol/gtk/dialogs/shift.py:
	* lib/gaupol/gtk/dialogs/subinsert.py:
	  Corrected all references after previous renamings.

2006-02-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/subinsert-dialog.glade:
	  Renamed from insertsub-dialog.glade.

	* lib/gaupol/gtk/dialogs/subinsert.py:
	  Renamed from insertsub.py.

2006-02-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/shift-dialog.glade:
	* lib/gaupol/gtk/delegates/timing.py:
	* lib/gaupol/gtk/dialogs/shift.py:
	  New files for timing shifting gtk implementation.

	* data/ui/menubar.xml:
	  Added "Shift Timings" menu item.

	* lib/gaupol/base/delegates/preview.py:
	  (PreviewDelegate._get_subtitle_path): Use get_temp_file_path().
	  (PreviewDelegate.get_temp_file_path): New method.
	  (PreviewDelegate.preview): Added temp_path as last argument
	  defaulting to None.

	* lib/gaupol/base/delegates/timing.py:
	* lib/gaupol/base/timing/calc.py:
	  Cosmetic changes.

	* lib/gaupol/gtk/delegates/__init__.py:
	  Added timing module.

	* lib/gaupol/gtk/delegates/fileopen.py:
	  (SSAWarningDialog): Changed message wording.

	* lib/gaupol/gtk/delegates/preview.py:
	  (IOErrorDialog, UnicodeErrorDialog): Changed message wording.

	* lib/gaupol/gtk/util/config.py:
	  (timing_shift): New class.

2006-02-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/__init__.py:
	  Added timing delegate module.

	* lib/gaupol/base/delegates/edit.py:
	  Fixed one loop to use enumerate().

	* lib/gaupol/base/delegates/timing.py:
	  New file. Implemented timing shifts.

	* lib/gaupol/base/timing/calc.py:
	  (add_seconds_to_time): New function.

2006-02-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/fileopen.py:
	  Fixed typo.

2006-02-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Fixed setting of PyChecker environment variable.
